# buildout.coredev

./: .gitignore  .mr.developer-options.cfg  .package_ignores  DO-NOT-USE-THIS-BRANCH.txt  Jenkinsfile  Makefile  PLONETEST-TODO.rst  README-make.md  README.rst  README.txt  README_moved_to_github.txt  RELEASE-NOTES.txt  TEST-FIXES-TODO.rst  TEST-FIXES-TODO.txt  TESTS_TODO.txt  Untitled.ipynb  WARNING.txt  add_dexterity.sh  alltests.py  bare.cfg  base.cfg  bootstrap-py3.sh  bootstrap-pyenv.sh  bootstrap.py  bootstrap.sh  buildout-py2.cfg  buildout-py3.cfg  buildout.cfg  chameleon.cfg  changelog.txt  checknew.py  checkouts.cfg  checkouts.ini  circular_deps.py  classictheme.cfg  cmftrunk.cfg  combine-constraints.py  compileall.sh  constraints-all.txt  constraints-core.txt  (+88 more)
.github/workflows/: bare.yml  ecosystem.yml  plone-build-and-tests.yml  run-buildout-27.yml  run-buildout-38.yml  run-buildout.yml  versioncheck.yml
.mxmake/files/: installed.txt
.mxmake/sentinels/: about.txt
docs/: agreement.rst  conf.py  continous-integration.rst  contributors_agreement_explained.rst  culture.rst  documentation.rst  git.rst  guidelines.rst  index.rst  intro.rst  issues.rst  labels.rst  mrdeveloper.rst  packages-dependencies.rst  plipreview.rst  plips.rst  release.rst  roboto.rst  style.rst  updateme.rst
docs/es/: agreement.rst  conf.py  continous-integration.rst  contributors_agreement_explained.rst  culture.rst  documentation.rst  index.rst  intro.rst  issues.rst  mrdeveloper.rst  plipreview.rst  plips.rst  roboto.rst  style.rst  updateme.rst
docs/pt_BR/: agreement.rst  conf.py  culture.rst  index.rst  intro.rst  plipreview.rst  style.rst
etc/: base-paste.ini  base-zope.conf  paste.ini  site.zcml  sources  versions  zope.conf
etc/package-includes/: 001-cmf.pt-configure.zcml
experimental/: apidoc.cfg  caching.cfg  chameleon.cfg  cmf.cfg  cmsui.cfg  configurable-scaling-quality-13337.cfg  davisagli-instance-construction.cfg  deco.cfg  dexterity.cfg  esteele-pas.cfg  expbase.cfg  i18n.cfg  intid.cfg  nested_groups.cfg  new-scales.cfg  nogopip.cfg  pil.cfg  plip10776-zope213.cfg  plone.app.users-z3c.form.cfg  plone.versioncheck-dev.cfg  py3x-test.cfg  qa.cfg  selenium.cfg  skineditor.cfg  themeeditor.cfg  ticket-10327-user-prefs.cfg  user_preferences_form.cfg  zeoserver.cfg  zope213.cfg
instance/etc/: site.zcml  zope.conf  zope.ini
jenkins.plone.org/: deco.xml  jenkins-code-analysis.xml  jenkins-test.xml  jenkins.experimental.xml  jenkins.xml  plone-4.0.xml  plone-4.1.xml  plone-4.2-code-analysis.xml  plone-4.2-ecosystem.xml  plone-4.2-test-coverage.xml  plone-4.2-tests-python-2.6.xml  plone-4.2-tests.xml  plone-4.2.xml  plone-4.3-code-analysis.xml  plone-4.3-ecosystem.xml  plone-4.3-plips.xml  plone-4.3-test-coverage.xml  plone-4.3-tests-python-2.6.xml  plone-4.3-tests.xml  plone-4.3.xml
jenkins.plone.org/templates/: extended_email_publisher.xml
plips/: base.sh  bug13327.cfg  cmf-merge.cfg  coreloadtests-buildout.cfg  coreloadtests.cfg  cssmin.cfg  email-registration.cfg  experimental-securityinfo.cfg  maurits-fix-html-validation.cfg  merge-collective-indexing.cfg  plip-1334-PlonePAS.cfg  plip-1342-portal-actions.cfg  plip-1441-lxml-safehtml-transform.cfg  plip-1483-retina-image-scales.cfg  plip-1485-use-react.cfg  plip-1486-redirection.cfg  plip-1600.cfg  plip-1653-staticresources.cfg  plip-1673-exif-image-rotation.cfg  plip-1734-icons-and-thumbs.cfg  plip-1775-remove-qi.cfg  plip-1979-base64_transform.cfg  plip-20154-easy-backend-theming.cfg  plip-20239-dexterity-api.cfg  plip-2092-login.cfg  plip-2150-new-datetime-and-date-widgets.cfg  plip-2177-plone-restapi.cfg  plip-2454-dx-siteroot.cfg  plip-2516-navigation.cfg  plip-2780-textindexer.cfg  plip-2967-barceloneta-lts  plip-2967-barceloneta-lts-source-checkouts.cfg  plip-2967-barceloneta-lts.cfg  plip-3211-mockup-redone-source-checkouts.cfg  plip-3211-mockup-redone.cfg  plip-3339-plone-autoinclude.cfg  plip-3395-plone.base-part-1.cfg  plip-3459-z3c-form-latest.cfg  plip-680-restapi.cfg  plip-698-linkintegrity.cfg  (+274 more)
plips/funkload/: base.sh  plips.sh
plips/implementation_notes/: plip10804-workflowmanager.txt  plip10809-improve-tablesorter.txt  plip10878-siteadmin-role.txt  plip10886-event-improvements.rst  plip10886-event-improvements.txt  plip10901-javascript-standards.txt  plip10902-todo.txt  plip11697-authorinfo-overlay.txt  plip12234-batching.txt  plip12253-users-z3cform.txt  plip12844-tinymce.txt  plip8699-pubdate-byline.txt  plip9324-collective.amberjack.txt  plip9352-search-results.txt
plips/plip13476/: .gitignore  Makefile  buildout.cfg  dev.nix  jenkins.cfg  latest.cfg  sources.cfg  toolbar.cfg  versions.cfg  widgets.cfg
plips/reviews/: plip-1653-review-ale-rt.rst  plip-1775-review-ale-rt.md  plip-3231-review-mrtango.md  plip-3339-review-ale-rt.md  plip10359-review-amleczko.rst  plip10359-review-rpatterson.rst  plip10778-review-alecm.txt  plip10778-review-cah190.txt  plip10778-review-robgietema.txt  plip10809-review-eleddy.txt  plip10809-review-robgietema.txt  plip10846-review-cah190.txt  plip10846-review-robgietema.txt  (+47 more)
products/: EXTERNALS.txt  README.txt
release/: .gitignore  RELEASE-NOTES.md  RELEASE-NOTES.txt  changelog.txt  checklist.md  combine-constraints.py  compile_version_ranges.py  constraints.txt  constraints2.txt  constraints3.txt  constraints39.txt  create-constraints.py  create-mxcheckouts.py  create-mxsources.py  tox.ini  toxrelease.cfg
scripts/: create-constraints.py
src/: EXTERNALS.txt  README.txt  add_dexterity.sh  release-egg.sh
templates/: addon-report-status.py  deps-update-status.py  jenkins-package-dependencies-cmf-imports.sh  jenkins-package-dependencies-cmf.sh  jenkins-package-dependencies-imports.sh  jenkins-package-dependencies.sh  library-settings.txt.in  nginx-uwsgi.conf  plone.ini  pr-update-status.py  uwsgi.ini  waitress.ini  wsgirun  zope.conf
tickets/: 8755.cfg  base.cfg
tstex_modules/: _api.ts
var/: README.txt
venvs/311/: bootstrap.sh  compile.py  constraints.txt  initialize_ranges.py  pyproject.toml  ranges.txt  versions.cfg  zope-constraints.txt
(+919 files in other folders)
