# This is a dummy package used to maintain version pins for Plone.
# It must never be released: there is no point to that.

[build-system]
# possibly add mxdev in here, pip-tools, wheel, requests, whatever we want,
# although I hope these then do not get installed in the current venv.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plonecoredevdummy"
version = "6.0.1"
description = "Dummy package to help Plone 6 core development"
requires-python = ">=3.8"
# All our dependencies are extras, or optional dependencies.
# This makes it possible to update e.g. only test dependencies.
dependencies = []

[project.optional-dependencies]
# Within a Plone minor release we prefer to only have bugfix releases.
# With "package~=1.2.3" we say: at least 1.2.3, but less than 1.3.0.
# See https://peps.python.org/pep-0440/#compatible-release
buildout = []
ecosystem = []
plone = [
    "attrs~=22.2.0",
    "beautifulsoup4~=4.11.1",
    "borg.localrole~=3.1.9",
    "certifi~=2022.12.7",
    "cffi~=1.15.1",
    "charset-normalizer~=2.1.1",
    "collective.monkeypatcher~=1.2.1",
    "cssselect~=1.2.0",
    "decorator~=5.1.1",
    "diazo~=1.5.0",
    "docutils~=0.17.1",
    "feedparser~=6.0.10",
    "five.customerize~=2.1.0",
    "five.intid~=1.2.6",
    "icalendar~=5.0.4",
    "idna~=3.4",
    "jsonschema~=4.17.3",
    "lxml~=4.9.2",
    "Markdown~=3.4.1",
    "PasteDeploy~=3.0.1",
    "piexif~=1.1.3",
    "Pillow~=9.4.0",
    "Plone~=6.0.1",
    "plone.alterego~=1.1.5",
    "plone.api~=2.0.1",
    "plone.app.caching~=3.0.2",
    "plone.app.content~=4.0.1",
    "plone.app.contentlisting~=3.0.1",
    "plone.app.contentmenu~=3.0.0",
    "plone.app.contentrules~=5.0.0",
    "plone.app.contenttypes~=3.0.1",
    "plone.app.customerize~=1.3.12",
    "plone.app.dexterity~=3.0.3",
    "plone.app.discussion~=4.0.0",
    "plone.app.event~=4.0.0",
    "plone.app.i18n~=4.0.0",
    "plone.app.intid~=1.1.4",
    "plone.app.iterate~=4.0.3",
    "plone.app.layout~=4.0.0",
    "plone.app.linkintegrity~=3.6.1",
    "plone.app.locales~=6.0.10",
    "plone.app.lockingbehavior~=1.0.7",
    "plone.app.multilingual~=6.0.0",
    "plone.app.portlets~=5.0.1",
    "plone.app.querystring~=2.0.1",
    "plone.app.redirector~=3.0.0",
    "plone.app.registry~=2.0.1",
    "plone.app.relationfield~=3.0.1",
    "plone.app.textfield~=1.3.6",
    "plone.app.theming~=5.0.0",
    "plone.app.upgrade~=3.0.1",
    "plone.app.users~=3.0.0",
    "plone.app.uuid~=2.2.1",
    "plone.app.versioningbehavior~=2.0.0",
    "plone.app.viewletmanager~=4.0.0",
    "plone.app.vocabularies~=5.0.0",
    "plone.app.widgets~=4.0.0",
    "plone.app.workflow~=5.0.1",
    "plone.app.z3cform~=4.0.1",
    "plone.autoform~=2.0.0",
    "plone.autoinclude~=1.0.1",
    "plone.base~=1.0.2",
    "plone.batching~=2.0.1",
    "plone.behavior~=1.4.0",
    "plone.browserlayer~=3.0.0",
    "plone.cachepurging~=3.0.0",
    "plone.caching~=1.2.2",
    "plone.contentrules~=2.1.2",
    "plone.dexterity~=3.0.0",
    "plone.event~=1.4.2",
    "plone.folder~=3.1.0",
    "plone.formwidget.namedfile~=3.0.0",
    "plone.formwidget.recurrence~=3.0.0",
    "plone.i18n~=5.0.0",
    "plone.indexer~=1.0.7",
    "plone.intelligenttext~=3.1.0",
    "plone.keyring~=3.1.3",
    "plone.locking~=2.2.5",
    "plone.memoize~=3.0.0",
    "plone.namedfile~=6.0.0",
    "plone.outputfilters~=5.0.0",
    "plone.portlet.collection~=4.0.0",
    "plone.portlet.static~=4.0.0",
    "plone.portlets~=2.3.2",
    "plone.protect~=4.1.8",
    "plone.registry~=1.2.1",
    "plone.resource~=2.1.4",
    "plone.resourceeditor~=3.0.4",
    "plone.rest~=2.0.0",
    "plone.restapi~=8.33.3",
    "plone.rfc822~=2.0.2",
    "plone.scale~=4.0.0",
    "plone.schema~=1.4.0",
    "plone.schemaeditor~=4.0.1",
    "plone.session~=4.0.1",
    "plone.staticresources~=2.0.4",
    "plone.stringinterp~=1.3.3",
    "plone.subrequest~=2.0.1",
    "plone.supermodel~=2.0.1",
    "plone.theme~=3.0.7",
    "plone.transformchain~=2.0.2",
    "plone.uuid~=1.0.6",
    "plone.volto~=4.0.5",
    "plone.z3cform~=2.0.0",
    "plonetheme.barceloneta~=3.0.0",
    "Products.CMFCore~=2.7.0",
    "Products.CMFDiffTool~=3.3.3",
    "Products.CMFDynamicViewFTI~=7.0.0",
    "Products.CMFEditions~=4.0.0",
    "Products.CMFPlacefulWorkflow~=3.0.1",
    "Products.CMFPlone~=6.0.1",
    "Products.CMFUid~=3.5",
    "Products.DateRecurringIndex~=3.0.1",
    "Products.DCWorkflow~=2.7.0",
    "Products.ExtendedPathIndex~=4.0.1",
    "Products.ExternalMethod~=4.7",
    "Products.GenericSetup~=2.3.0",
    "Products.isurlinportal~=1.2.1",
    "Products.MailHost~=4.13",
    "Products.MimetypesRegistry~=2.1.9",
    "Products.PlonePAS~=7.0.0",
    "Products.PluggableAuthService~=2.8.1",
    "Products.PluginRegistry~=1.11",
    "Products.PortalTransforms~=3.2.1",
    "Products.PythonScripts~=4.15",
    "Products.Sessions~=4.15",
    "Products.SiteErrorLog~=5.7",
    "Products.StandardCacheManagers~=4.2",
    "Products.statusmessages~=5.0.5",
    "Products.ZopeVersionControl~=3.1.0",
    "pycparser~=2.21",
    "PyJWT~=2.6.0",
    "pyrsistent~=0.19.3",
    "python-dateutil~=2.8.2",
    "python-gettext~=4.1",
    "repoze.xmliter~=0.6.1",
    "requests~=2.28.1",
    "sgmllib3k~=1.0.0",
    "simplejson~=3.18.1",
    "soupsieve~=2.3.2.post1",
    "Unidecode~=1.3.6",
    "urllib3~=1.26.13",
    "webresource~=1.2",
    "z3c.caching~=2.2",
    "z3c.form~=4.3",
    "z3c.formwidget.query~=1.0.0",
    "z3c.objpath~=1.3",
    "z3c.relationfield~=0.9.0",
    "z3c.zcmlhook~=1.1",
    "zc.relation~=1.1.post2",
    "ZODB3~=3.11.0",
    "Zope~=5.8",
    "zope.app.locales~=4.3",
    "zope.copy~=4.3",
    "zope.intid~=4.4.0",
    "zope.keyreference~=5.0.0",
]
test = []
tools = []
zope = []

[tool.setuptools]
# This is a dummy package without code.
packages = []
