# This is a dummy package used to maintain version pins for Plone.
# It must never be released: there is no point to that.

[build-system]
# possibly add mxdev in here, pip-tools, wheel, requests, whatever we want,
# although I hope these then do not get installed in the current venv.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plonecoredev"
version = "6.0.1"
description = "Dummy package to help Plone 6 core development"
requires-python = ">=3.8"
# All our dependencies are extras, or optional dependencies.
# This makes it possible to update e.g. only test dependencies.
dependencies = []

[project.optional-dependencies]
# Within a Plone minor release we prefer to only have bugfix releases.
# With "package~=1.2.3" we say: at least 1.2.3, but less than 1.3.0.
# See https://peps.python.org/pep-0440/#compatible-release
buildout = [
    # Add all recipes and extensions from the buildout configs here.
    "collective.recipe.omelette",
    "collective.recipe.template",
    "collective.recipe.vscode",
    "collective.xmltestreport",
    "mr.developer",
    "plone.recipe.precompiler",
    "plone.recipe.zeoserver",
    "plone.recipe.zope2instance",
    "plone.versioncheck",
    "zc.buildout",
    "zc.recipe.egg",
    # constraints:
    "CacheControl~=0.12.11",
    "collective.recipe.omelette~=1.1.0",
    "collective.recipe.template~=2.2",
    "collective.recipe.vscode~=0.1.8",
    "collective.xmltestreport~=2.0.2",
    "lockfile~=0.12.2",
    "mr.developer~=2.0.1",
    "msgpack~=1.0.4",
    "plone.recipe.precompiler~=0.7.2",
    "plone.recipe.zeoserver~=2.0.3",
    "plone.recipe.zope2instance~=6.12.0",
    "plone.versioncheck~=1.7.0",
    "python-dotenv~=0.21.1",
    "zc.buildout~=3.0.1",
    "zc.recipe.egg~=2.0.7",
    "zope.mkzeoinstance~=5.0",
    "ZopeUndo~=5.0",
]
ecosystem = [
    "collective.z3cform.datagridfield",
    "plone.app.debugtoolbar",
    "plone.app.mosaic",
    "plone.jsonserializer",
    "Products.PDBDebugMode",
    "Products.PrintingMailHost",
    "z3c.jbot",
    "z3c.unconfigure",
    # constraints:
    "collective.z3cform.datagridfield~=3.0.0",
    "plone.app.blocks~=7.0.0",
    "plone.app.debugtoolbar~=1.3.0",
    "plone.app.drafts~=2.0.0",
    "plone.app.mosaic~=3.0.0",
    "plone.app.standardtiles~=3.0.0",
    "plone.app.tiles~=4.0.0",
    "plone.jsonserializer~=0.9.11",
    "Products.PDBDebugMode~=2.0",
    "Products.PrintingMailHost~=1.1.6",
    "z3c.jbot~=1.1.1",
    "z3c.unconfigure~=2.0",
]
plone = [
    "attrs~=22.2.0",
    "beautifulsoup4~=4.11.1",
    "borg.localrole~=3.1.9",
    "certifi~=2022.12.7",
    "cffi~=1.15.1",
    "charset-normalizer~=2.1.1",
    "collective.monkeypatcher~=1.2.1",
    "cssselect~=1.2.0",
    "decorator~=5.1.1",
    "diazo~=1.5.0",
    "docutils~=0.17.1",
    "feedparser~=6.0.10",
    "five.customerize~=2.1.0",
    "five.intid~=1.2.6",
    "icalendar~=5.0.4",
    "idna~=3.4",
    "jsonschema~=4.17.3",
    "lxml~=4.9.2",
    "Markdown~=3.4.1",
    "PasteDeploy~=3.0.1",
    "piexif~=1.1.3",
    "Pillow~=9.4.0",
    "Plone~=6.0.1",
    "plone.alterego~=1.1.5",
    "plone.api~=2.0.1",
    "plone.app.caching~=3.0.2",
    "plone.app.content~=4.0.1",
    "plone.app.contentlisting~=3.0.1",
    "plone.app.contentmenu~=3.0.0",
    "plone.app.contentrules~=5.0.0",
    "plone.app.contenttypes~=3.0.1",
    "plone.app.customerize~=1.3.12",
    "plone.app.dexterity~=3.0.3",
    "plone.app.discussion~=4.0.0",
    "plone.app.event~=4.0.0",
    "plone.app.i18n~=4.0.0",
    "plone.app.intid~=1.1.4",
    "plone.app.iterate~=4.0.3",
    "plone.app.layout~=4.0.0",
    "plone.app.linkintegrity~=3.6.1",
    "plone.app.locales~=6.0.10",
    "plone.app.lockingbehavior~=1.0.7",
    "plone.app.multilingual~=6.0.0",
    "plone.app.portlets~=5.0.1",
    "plone.app.querystring~=2.0.1",
    "plone.app.redirector~=3.0.0",
    "plone.app.registry~=2.0.1",
    "plone.app.relationfield~=3.0.1",
    "plone.app.textfield~=1.3.6",
    "plone.app.theming~=5.0.0",
    "plone.app.upgrade~=3.0.1",
    "plone.app.users~=3.0.0",
    "plone.app.uuid~=2.2.1",
    "plone.app.versioningbehavior~=2.0.0",
    "plone.app.viewletmanager~=4.0.0",
    "plone.app.vocabularies~=5.0.0",
    "plone.app.widgets~=4.0.0",
    "plone.app.workflow~=5.0.1",
    "plone.app.z3cform~=4.0.1",
    "plone.autoform~=2.0.0",
    "plone.autoinclude~=1.0.1",
    "plone.base~=1.0.2",
    "plone.batching~=2.0.1",
    "plone.behavior~=1.4.0",
    "plone.browserlayer~=3.0.0",
    "plone.cachepurging~=3.0.0",
    "plone.caching~=1.2.2",
    "plone.contentrules~=2.1.2",
    "plone.dexterity~=3.0.0",
    "plone.event~=1.4.2",
    "plone.folder~=3.1.0",
    "plone.formwidget.namedfile~=3.0.0",
    "plone.formwidget.recurrence~=3.0.0",
    "plone.i18n~=5.0.0",
    "plone.indexer~=1.0.7",
    "plone.intelligenttext~=3.1.0",
    "plone.keyring~=3.1.3",
    "plone.locking~=2.2.5",
    "plone.memoize~=3.0.0",
    "plone.namedfile~=6.0.0",
    "plone.outputfilters~=5.0.0",
    "plone.portlet.collection~=4.0.0",
    "plone.portlet.static~=4.0.0",
    "plone.portlets~=2.3.2",
    "plone.protect~=4.1.8",
    "plone.registry~=1.2.1",
    "plone.resource~=2.1.4",
    "plone.resourceeditor~=3.0.4",
    "plone.rest~=2.0.0",
    "plone.restapi~=8.33.3",
    "plone.rfc822~=2.0.2",
    "plone.scale~=4.0.0",
    "plone.schema~=1.4.0",
    "plone.schemaeditor~=4.0.1",
    "plone.session~=4.0.1",
    "plone.staticresources~=2.0.4",
    "plone.stringinterp~=1.3.3",
    "plone.subrequest~=2.0.1",
    "plone.supermodel~=2.0.1",
    "plone.theme~=3.0.7",
    "plone.transformchain~=2.0.2",
    "plone.uuid~=1.0.6",
    "plone.volto~=4.0.5",
    "plone.z3cform~=2.0.0",
    "plonetheme.barceloneta~=3.0.0",
    "Products.CMFCore~=2.7.0",
    "Products.CMFDiffTool~=3.3.3",
    "Products.CMFDynamicViewFTI~=7.0.0",
    "Products.CMFEditions~=4.0.0",
    "Products.CMFPlacefulWorkflow~=3.0.1",
    "Products.CMFPlone~=6.0.1",
    "Products.CMFUid~=3.5",
    "Products.DateRecurringIndex~=3.0.1",
    "Products.DCWorkflow~=2.7.0",
    "Products.ExtendedPathIndex~=4.0.1",
    "Products.ExternalMethod~=4.7",
    "Products.GenericSetup~=2.3.0",
    "Products.isurlinportal~=1.2.1",
    "Products.MailHost~=4.13",
    "Products.MimetypesRegistry~=2.1.9",
    "Products.PlonePAS~=7.0.0",
    "Products.PluggableAuthService~=2.8.1",
    "Products.PluginRegistry~=1.11",
    "Products.PortalTransforms~=3.2.1",
    "Products.PythonScripts~=4.15",
    "Products.Sessions~=4.15",
    "Products.SiteErrorLog~=5.7",
    "Products.StandardCacheManagers~=4.2",
    "Products.statusmessages~=5.0.5",
    "Products.ZopeVersionControl~=3.1.0",
    "pycparser~=2.21",
    "PyJWT~=2.6.0",
    "pyrsistent~=0.19.3",
    "python-dateutil~=2.8.2",
    "python-gettext~=4.1",
    "repoze.xmliter~=0.6.1",
    "requests~=2.28.1",
    "sgmllib3k~=1.0.0",
    "simplejson~=3.18.1",
    "soupsieve~=2.3.2.post1",
    "Unidecode~=1.3.6",
    "urllib3~=1.26.13",
    "webresource~=1.2",
    "z3c.caching~=2.2",
    "z3c.form~=4.3",
    "z3c.formwidget.query~=1.0.0",
    "z3c.objpath~=1.3",
    "z3c.relationfield~=0.9.0",
    "z3c.zcmlhook~=1.1",
    "zc.relation~=1.1.post2",
    "ZODB3~=3.11.0",
    "Zope~=5.8",
    "zope.app.locales~=4.3",
    "zope.copy~=4.3",
    "zope.intid~=4.4.0",
    "zope.keyreference~=5.0.0",
]
test = [
    # Here we want all packages in tests.cfg in test-eggs
    # that have a test/tests extra.
    "diazo [test]",
    "plone.api [test]",
    "plone.app.caching [test]",
    "plone.app.contentlisting [test]",
    "plone.app.contenttypes [test]",
    "plone.app.discussion [test]",
    "plone.app.event [test]",
    "plone.app.iterate [test]",
    "plone.app.layout [test]",
    "plone.app.linkintegrity [test]",
    "plone.app.portlets [test]",
    "plone.app.testing [test]",
    "plone.app.textfield [tests]",
    "plone.app.theming [test]",
    "plone.app.upgrade [test]",
    "plone.app.users [test]",
    "plone.app.versioningbehavior [tests]",
    "plone.app.widgets [test]",
    "plone.app.z3cform [tests]",
    "plone.cachepurging [test]",
    "plone.dexterity [test]",
    "plone.event [test]",
    "plone.namedfile [test]",
    "plone.outputfilters [test]",
    "plone.resource [test]",
    "plone.resourceeditor [test]",
    "plone.rest [test]",
    "plone.restapi [test]",
    "plone.schemaeditor [test]",
    "plone.subrequest [test]",
    "plone.supermodel [test]",
    "plone.testing [test]",
    "plone.transformchain [test]",
    "plone.uuid [test]",
    "plone.volto [test]",
    "plone.z3cform [test]",
    "Products.CMFPlacefulWorkflow [test]",
    "Products.CMFPlone [test]",
    "Products.DateRecurringIndex [test]",
    # And below is a list of actually
    # installed extra packages because of the test extras.",
    "async-generator~=1.10",
    "Babel~=2.11.0",
    "collective.MockMailHost~=2.0.0",
    "furl~=2.1.3",
    "gunicorn~=20.1.0",
    "h11~=0.14.0",
    "manuel~=1.12.4",
    "mock~=4.0.3",
    "orderedmultidict~=1.0.1",
    "outcome~=1.2.0",
    "plone.app.robotframework~=2.0.0",
    "plone.app.testing~=7.0.0",
    "plone.testing~=8.0.3",
    "plone.tiles~=2.3.1",
    "prompt-toolkit~=2.0.10",
    "py~=1.11.0",
    "PySocks~=1.7.1",
    "responses~=0.22.0",
    "robotframework-debuglibrary~=2.3.0",
    "robotframework-pythonlibcore~=4.1.0",
    "robotframework-selenium2library~=3.0.0",
    "robotframework-seleniumlibrary~=6.0.0",
    "robotframework-seleniumtestability~=2.0.0",
    "robotframework~=6.0.2",
    "robotsuite~=2.3.1",
    "selenium~=4.8.0",
    "sniffio~=1.3.0",
    "sortedcontainers~=2.4.0",
    "toml~=0.10.2",
    "trio-websocket~=0.9.2",
    "trio~=0.22.0",
    "types-toml~=0.10.8.3",
    "wcwidth~=0.2.6",
    "wrapt~=1.14.1",
    "wsproto~=1.2.0",
    "zope.testrunner~=5.6",
]
tools = [
    "plone.releaser",
    "zest.releaser[recommended]",
    # And below is a list of actually installed extra packages
    # because of the tools extra.
    "argcomplete~=2.0.0",
    "argh~=0.27.2",
    "bleach~=6.0.0",
    "build~=0.10.0",
    "check-manifest~=0.49",
    "click~=8.1.3",
    "click-default-group~=1.2.2",
    "colorama~=0.4.6",
    "configparser~=5.3.0",
    "Deprecated~=1.2.13",
    "distro~=1.8.0",
    "gitdb~=4.0.10",
    "GitPython~=3.1.30",
    "httplib2~=0.21.0",
    "importlib-metadata~=6.0.0",
    "incremental~=22.10.0",
    "jaraco.classes~=3.2.3",
    "Jinja2~=3.1.2",
    "keyring~=23.13.1",
    "launchpadlib~=1.11.0",
    "lazr.restfulclient~=0.14.5",
    "lazr.uri~=1.0.6",
    "markdown-it-py~=2.1.0",
    "MarkupSafe~=2.1.2",
    "mdurl~=0.1.2",
    "more-itertools~=9.0.0",
    "oauthlib~=3.2.2",
    "packaging~=23.0",
    "pep440~=0.1.2",
    "pep517~=0.13.0",
    "pkginfo~=1.9.6",
    "plone.releaser~=1.8.8",
    "progress~=1.6",
    "PyGithub~=1.57",
    "Pygments~=2.14.0",
    "PyNaCl~=1.5.0",
    "pyparsing~=3.0.9",
    "pyproject_hooks~=1.0.0",
    "pyroma~=4.1",
    "readme-renderer~=37.3",
    "requests-toolbelt~=0.10.1",
    "rfc3986~=2.0.0",
    "rich~=13.3.1",
    "smmap~=5.0.0",
    "tomli~=2.0.1",
    "towncrier~=22.12.0",
    "trove-classifiers~=2023.2.8",
    "twine~=4.0.2",
    "wadllib~=1.3.6",
    "webencodings~=0.5.1",
    "zest.releaser~=7.3.0",
    "zestreleaser.towncrier~=1.3.0",
    "zipp~=3.13.0",
]
zope = [
    # We have this in the plone additional dependencies as well. Let's see.
    "Zope~=5.8",
]

[tool.setuptools]
# This is a dummy package without code.
packages = []
